apps/srrrg/prod/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srrrg-prod-app
  labels:
    app: srrrg-prod-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srrrg-prod-app
  template:
    metadata:
      labels:
        app: srrrg-prod-app
    spec:
      containers:
      - name: srrrg-prod-app
        image: ghcr.io/mohyeonman/srrrg
        ports:
        - containerPort: 8080
          name: app
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: app
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: app
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 3
          failureThreshold: 3
