apps/srrrg/prod/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srrrg-prod-app
  labels:
    app: srrrg-prod-app
spec:
  type: ClusterIP
  selector:
    app: srrrg-prod-app
  ports:
  - name: app
    port: 80
    targetPort: 8080
