apps/srrrg/prod/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srrrg-prod-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: srrrg.link
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: "*.srrrg.link"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - srrrg.link
        - www.srrrg.link
        - "*.srrrg.link"
  rules:
    - host: srrrg.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srrrg-prod-app
                port:
                  number: 80
    - host: www.srrrg.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srrrg-prod-app
                port:
                  number: 80
    - host: "*.srrrg.link"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srrrg-prod-app
                port:
                  number: 80
